--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
   "author": "YourNameOrOrganization",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "latest",
-    "@actions/github": "latest"
+    "@actions/core": "^1.0.0",
+    "@actions/github": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.25",
     "@typescript-eslint/parser": "^2.18.0",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "^0.29.0",
     "eslint": "^5.16.0",
     "eslint-plugin-github": "^2.0.0",
     "eslint-plugin-jest": "^22.21.0",
@@ -41,6 +41,8 @@
     "js-yaml": "^3.13.1",
     "prettier": "^1.19.1",
     "ts-jest": "^24.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^4.3.5",
+    "@actions/core": "^1.0.0",
+    "@actions/github": "^1.0.0"
   }
 }
